# peralta

./: .gitignore  LICENSE  README.md  makefile  pyproject.toml  pyrightconfig.json
blog/: main.md
data/: math_10k.csv  math_1k.csv  math_250.csv
docs/: CNAME  index.html
docs/assets/: math_10k.html  math_1k.html
notebooks/: plots.ipynb
programs/: math_grpo.py  math_reinforce.py
scripts/: diagnostics.sh  expander.py  serve_blog.py  start_cluster.sh  stop_cluster.sh
